--- a/style.css
+++ b/style.css
@@ -4,25 +4,25 @@
 }
 #header {
   display: flex;
-  align-items: center;
   justify-content: space-around;
   background-color: darkslategray;
   width: 100%;
-  max-width:100vw;
-  height: 80vh;
+  max-width: 100vw;
 }
 .img {
   width: 100%;
   max-width: 300px;
   height: auto;
   border-radius: 50%;
-  padding: 20px;
+  padding-right: 20px;
+  margin-top: 40px;
 }
 
 .header-content {
   color: white;
   padding: 10px;
-  font-size: 2vw;
+  font-size: 1.75vw;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
@@ -36,7 +36,7 @@ button {
   border: none;
   cursor: pointer;
   margin: 10px 0px;
-  width: 10vw;
+  width: 20vw;
 }
 button:hover {
   background-color: cornsilk;
@@ -60,6 +60,9 @@ ul li {
 li a {
   color: white;
   text-decoration: none;
+}
+a:hover {
+  color: rgb(107, 192, 226);
 }
 #title {
   text-align: center;
@@ -111,16 +114,17 @@ li a {
 }
 .github-btn {
   margin-top: 20px;
+  color: rgb(107, 192, 226);
+}
+.github-btn a {
+  text-decoration: none;
+  color: white;
 }
 
-.call-to-action-button {
-  background-color: #3882f6;
-  border: 2px solid white;
-  border-radius: 6px;
-  color: white;
-  text-decoration: none;
-  padding: 8px;
+.github-btn a:hover {
+  color: rgb(107, 192, 226);
 }
+
 .footer {
   display: flex;
   justify-content: center;
