--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 #header {
   display: flex;
+  align-items: center;
   justify-content: space-around;
   background-color: darkslategray;
   width: 100%;
@@ -75,16 +76,17 @@ a:hover {
   align-items: center;
   width: 100%;
   max-width: 100vw;
-  height: 90vh;
+  height: 70vh;
 }
 .info {
   text-align: center;
+
 }
 .third-container {
   background-color: rgb(219, 219, 219);
   width: 100%;
   max-width: 100vw;
-  height: 90vh;
+  height: 70vh;
   font-size: xx-large;
   display: flex;
   justify-content: center;
@@ -94,7 +96,7 @@ a:hover {
 .fourth-container {
   width: 100%;
   max-width: 100vw;
-  height: 90vh;
+  height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
