--- a/style.css
+++ b/style.css
@@ -12,17 +12,17 @@
   }
   .img {
     width: 100%;
-    max-width: 300px;
+    max-width: 280px;
     height: auto;
     border-radius: 50%;
-    padding-right: 20px;
-    margin-top: 40px;
+   
+  
   }
   
   .header-content {
     color: white;
     padding: 10px;
-    font-size: 1.75vw;
+    font-size: 1.5vw;
     font-family: Arial, Helvetica, sans-serif;
   }
   
@@ -136,3 +136,75 @@
     color: white;
     height: 10vh;
   }
+  @media only screen and (max-width: 950px) {
+  .img {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    }
+  }
+  @media only screen and (max-width: 750px) {
+    .img {
+      width: 100%;
+      max-width: 170px;
+      height: auto;
+      padding-right: 10px;
+      }
+      .header-content {
+        font-size: 1.6vw;
+       
+        }
+
+    }
+    @media only screen and (max-width: 600px) {
+
+      .img {
+        width: 100%;
+        max-width: 150px;
+        height: auto;
+        padding-right: 20px;
+        }
+     .header-content {
+        font-size: 1.8vw;
+       
+        }
+
+      }
+      @media only screen and (max-width: 460px) {
+        .img {
+          width: 100%;
+          max-width: 200px;
+          height: auto;
+          padding-right: 20px;
+          }
+        .header-content {
+           font-size: 2.2vw;
+          
+           }
+   
+         }
+      @media only screen and (max-width: 400px) {
+        .img {
+          width: 100%;
+          max-width: 300px;
+          height: auto;
+          }
+        .header-content {
+           font-size: 2.5vw;
+          
+           }
+   
+         }
+         @media only screen and (max-width: 320px) {
+          .img {
+            width: 100%;
+            max-width: 100vw;
+            height: auto;
+            }
+          .header-content {
+             font-size: 3vw;
+            
+             }
+     
+           }
+
